# windroot

./: .gitignore  .zenodo.json  BACKTEST_REPORT.md  CITATION.cff  LICENSE  README.md  pyproject.toml
backtests/: __init__.py  cases.py  pfss_adapter.py  run_all.py  run_pfss_xv.py  run_real_gong.py  run_synthetic.py  runner.py
examples/: worked_example_AR_to_PSP.py
tests/: test_ballistic.py  test_cli_viz.py  test_pfss.py  test_pipeline.py  test_rank.py  test_spectro.py
windroot/: __init__.py  _units.py  ballistic.py  cli.py  insitu.py  pfss.py  pipeline.py  rank.py  spectro.py  viz.py
